--- a/gov/templates/state/redesign/forms/mining_stats.html
+++ b/gov/templates/state/redesign/forms/mining_stats.html
@@ -16,18 +16,19 @@
     <tbody>
         <tr>
             <td>
-                Регион
+                {% trans 'Регион' context "mining_stats" %}
             </td>
             <td style="text-align: center;">
-                Финансирование
+                {% trans 'Финансирование' context "mining_stats" %}
             </td>
             <td class="gover__td--onlyMob"></td>
-            <td class="gover__td--onlyPc">Нефть</td>
+            <td class="gover__td--onlyPc">{% trans 'Нефть' context "mining_stats" %}</td>
             {% for mineral in minerals %}
             <td class="gover__td--onlyPc">
                 {{ minerals_dict|dict_key:mineral }}
             </td>
             {% endfor %}
+            <td class="gover__td--onlyPc">{% trans 'Золото' context "mining_stats" %}</td>
         </tr>
     {% with region_dict=data|dict_key:'region_dict' %}
     {% for region in region_dict|get_key_list %}
@@ -48,7 +49,7 @@
                     {% for oil in oils %}
                     {% if line|has_key:oil %}
                     <div>
-                        <span>Нефть:</span>
+                        <span>{% trans 'Нефть' context "mining_stats" %}:</span>
                         <span>{{ line|dict_key:oil }}</span>
                     </div>
                     {% endif %}
@@ -60,6 +61,11 @@
                         <span>{{ line|dict_key:mineral }}</span>
                     </div>
                     {% endfor %}
+
+                    <div>
+                        <span>{% trans 'Золото' context "mining_stats" %}:</span>
+                        <span style="color: #eb9929">{{ line|dict_key:'gold' }}</span>
+                    </div>
                 </div>
             </td>
             <td class="gover__tableInfoTd">
@@ -75,6 +81,10 @@
             {% for mineral in minerals %}
             <td class="gover__td--onlyPc">{{ line|dict_key:mineral }}</td>
             {% endfor %}
+
+            <td class="gover__td--onlyPc" style="color: #eb9929">
+                {{ line|dict_key:'gold' }}
+            </td>
             {% endwith %}
         </tr>
     {% endfor %}
