перевод на английский

--- a/article/templates/article/article.html
+++ b/article/templates/article/article.html
@@ -381,7 +381,7 @@
                             fill="var(--c10one)" />
                     </g>
                 </svg>
-                <span>статья</span>
+                <span>{% trans 'статья' context "article" %}</span>
             </button>
             <button class="ct__top-tab ct__top-tab2 ct__mid-btn">
                 <svg width="144" height="30" viewBox="0 0 144 30" xmlns="http://www.w3.org/2000/svg">
@@ -399,7 +399,7 @@
                             fill="var(--c10one)" />
                     </g>
                 </svg>
-                <span>комментарии</span>
+                <span>{% trans 'комментарии' context "article" %}</span>
             </button>
         </div>
 
