--- a/event/templates/event/invited_list.html
+++ b/event/templates/event/invited_list.html
@@ -24,8 +24,8 @@
 			<tr>
 
 				  <td class="j-t-image"></td>
-				  <td class="j-t-nickname">Никнейм</td>
-				  <td class="j-t-bonus">Бонус</td>
+				  <td class="j-t-nickname">{% trans 'Никнейм' context "game_event" %}</td>
+				  <td class="j-t-bonus">{% trans 'Бонус' context "game_event" %}</td>
 
 			</tr>
 
