--- a/article/templates/article/new_article.html
+++ b/article/templates/article/new_article.html
@@ -8,6 +8,11 @@
 {% load redesign.template_svg.nopic %}
 
 {% block for_scripts_and_css %}
+<script>
+	var header_text = "{% trans 'Новая статья' context "article" %}";
+	var body_text = "{% trans 'Статья не может быть пустой' context "article" %}";
+	var ok_text = "{% trans 'Закрыть' context "core" %}";
+</script>
 <script src='{% static "js/new_article.js" %}?{{ csrf_token }}'></script>
 {% endblock %}
 
