--- a/bill/templates/state/redesign/drafts/change_coat.html
+++ b/bill/templates/state/redesign/drafts/change_coat.html
@@ -91,7 +91,7 @@
 				</div>
 				<div class="btn-r-wrapper">
 					<button type="button" class="btn btn-default back-crop-js" data-dismiss="modal">{% trans 'Отмена' context "change_coat_draft" %}</button>
-					<button type="button" class="btn btn-primary js-crop-and-upload">{% trans 'Загрузить' context "change_coat_draft" %}{% if player.image %}, -100 G{% endif %}</button>
+					<button type="button" class="btn btn-primary js-crop-and-upload">{% trans 'Загрузить' context "change_coat_draft" %}</button>
 				</div>
 			</div>
 		</div>
