--- a/player/templates/player/index.html
+++ b/player/templates/player/index.html
@@ -77,7 +77,7 @@
   <noscript><div><img src="https://mc.yandex.ru/watch/95467903" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
   <!-- /Yandex.Metrika counter -->
   <section class="login">
-    <img class="login__pcBg" src="{% static 'img/index/map-bg.jpg' %}">
+    <img class="login__pcBg" src="{% static 'img/index/map-bg.webp' %}">
 
     <div class="login__grid">
       <div class="login__wrapper login__wrapper--mini" id='linksModal'>
@@ -336,32 +336,32 @@
         <li class="lSlider__item">
           <button class="lSlider__btn">
             <picture>
-              <source media="(min-width: 1200px)" srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_1_mini.png">
-              <img src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_1.png" alt="Wildpolitics - скриншот игры" class="lSlider__img">
+              <source media="(min-width: 1200px)" srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_1_mini.webp">
+              <img src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_1.webp" alt="Wildpolitics - скриншот игры" class="lSlider__img">
             </picture>
           </button>
         </li>
         <li class="lSlider__item">
           <button class="lSlider__btn">
             <picture>
-              <source media="(min-width: 1200px)" srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_2_mini.png">
-              <img src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_2.png" alt="Wildpolitics - скриншот игры" class="lSlider__img">
+              <source media="(min-width: 1200px)" srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_2_mini.webp">
+              <img src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_2.webp" alt="Wildpolitics - скриншот игры" class="lSlider__img">
             </picture>
           </button>
         </li>
         <li class="lSlider__item">
           <button class="lSlider__btn">
             <picture>
-              <source media="(min-width: 1200px)" srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_3_mini.png">
-              <img src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_3.png" alt="Wildpolitics - скриншот игры" class="lSlider__img">
+              <source media="(min-width: 1200px)" srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_3_mini.webp">
+              <img src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_3.webp" alt="Wildpolitics - скриншот игры" class="lSlider__img">
             </picture>
           </button>
         </li>
         <li class="lSlider__item">
           <button class="lSlider__btn">
             <picture>
-              <source media="(min-width: 1200px)" srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_4_mini.png">
-              <img src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_4.png" alt="Wildpolitics - скриншот игры" class="lSlider__img">
+              <source media="(min-width: 1200px)" srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_4_mini.webp">
+              <img src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_4.webp" alt="Wildpolitics - скриншот игры" class="lSlider__img">
             </picture>
           </button>
         </li>
@@ -370,31 +370,31 @@
 
   </section>
 
-  <section class="popupSlider">
+  <section class="popupSlider" style="z-index: 3;">
 
     <ul class="popupSlider__list" id="popupSlider__list">
       <li class="popupSlider__item">
         <picture class="lazy_loaded">
-          <source media="(min-width: 1200px)" data-srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_1.png">
-          <img data-src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_1.png" alt="Wildpolitics - скриншот игры" class="lSlider__img">
+          <source media="(min-width: 1200px)" data-srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_1.webp">
+          <img data-src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_1.webp" alt="Wildpolitics - скриншот игры" class="lSlider__img">
         </picture>
       </li>
       <li class="popupSlider__item">
         <picture class="lazy_loaded">
-          <source media="(min-width: 1200px)" data-srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_2.png">
-          <img data-src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_2.png" alt="Wildpolitics - скриншот игры" class="lSlider__img">
+          <source media="(min-width: 1200px)" data-srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_2.webp">
+          <img data-src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_2.webp" alt="Wildpolitics - скриншот игры" class="lSlider__img">
         </picture>
       </li>
       <li class="popupSlider__item">
         <picture class="lazy_loaded">
-          <source media="(min-width: 1200px)" data-srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_3.png">
-          <img data-src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_3.png" alt="Wildpolitics - скриншот игры" class="lSlider__img">
+          <source media="(min-width: 1200px)" data-srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_3.webp">
+          <img data-src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_3.webp" alt="Wildpolitics - скриншот игры" class="lSlider__img">
         </picture>
       </li>
       <li class="popupSlider__item">
         <picture class="lazy_loaded">
-          <source media="(min-width: 1200px)" data-srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_4.png">
-          <img data-src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_4.png" alt="Wildpolitics - скриншот игры" class="lSlider__img">
+          <source media="(min-width: 1200px)" data-srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_4.webp">
+          <img data-src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_4.webp" alt="Wildpolitics - скриншот игры" class="lSlider__img">
         </picture>
       </li>
     </ul>
