--- a/player/templates/player/redesign/header.html
+++ b/player/templates/player/redesign/header.html
@@ -192,7 +192,7 @@
 	</svg>
 </button>
 <div class="edu__content" id="eduContent" style="z-index: 8;">
-  <img class="edu__img" src="/static/redesign/img/Ann.png" alt="">
+  <img class="edu__img" src="/static/redesign/img/Ann.webp" alt="">
   <img class="edu__rewardImg" id="eduRewardImg">
   <p class="edu__text" id="eduText"></p>
   <div class="edu__btns">
