замена картинок регионов на webp

--- a/bill/templates/state/redesign/bills/change_taxes.html
+++ b/bill/templates/state/redesign/bills/change_taxes.html
@@ -30,7 +30,7 @@
         </div>
         {% else %}
         <div class="gover__withImage">
-            <img src="static/img/regions/{{ bill.region.on_map_id }}.png">
+            <img src="static/img/regions/webp/55/{{ bill.region.on_map_id }}.webp">
             <span>{{ bill.region }}</span>
         </div>
         {% endif %}
