--- a/bill/templates/state/redesign/drafts/transfer_accept.html
+++ b/bill/templates/state/redesign/drafts/transfer_accept.html
@@ -12,7 +12,7 @@
         {% for transfer in transfers %}
         {% if forloop.counter0 == 0 %}
         <div class="ct__selectWithImage-selected" id="transfer_accept_default_region" data-value="{% localize off %}{{ transfer.region.pk }}{% endlocalize %}">
-            <img id="transfer_accept_default_img" src="/static/img/regions/{{ transfer.region.on_map_id }}.png">
+            <img id="transfer_accept_default_img" src="/static/img/regions/webp/55/{{ transfer.region.on_map_id }}.webp">
             <div class="ct__selectWithImage-firstText">
                 <span id="transfer_accept_default_reg">{{ region.region_name }}</span>
                 <svg class="ct__selectWithImage-arrow" width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -25,7 +25,7 @@
         <div class="ct__selectWithImage-content custom-scroll custom-scroll--alt">
             {% for transfer in transfers %}
             <div id="transfer_accept_{% localize off %}{{ transfer.region.pk }}{% endlocalize %}" {% if forloop.counter0 == 0 %}class="region_storage"{% endif %} data-value="{% localize off %}{{ transfer.region.pk }}{% endlocalize %}">
-                <img class="offer_dummy_img" src="/static/img/regions/{{ transfer.region.on_map_id }}.png">
+                <img class="offer_dummy_img" src="/static/img/regions/webp/55/{{ transfer.region.on_map_id }}.webp">
                 <span class="offer_dummy_region">{{ region.region_name }}</span>
             </div>
             {% endfor %}
