--- a/bill/templates/state/redesign/drafts/transfer_region.html
+++ b/bill/templates/state/redesign/drafts/transfer_region.html
@@ -13,7 +13,7 @@
         {% for region in regions %}
         {% if forloop.counter0 == 0 %}
         <div class="ct__selectWithImage-selected" id="transfer_region_default_region" data-value="{% localize off %}{{ region.pk }}{% endlocalize %}">
-            <img id="transfer_region_default_img" src="/static/img/regions/{{ region.on_map_id }}.png">
+            <img id="transfer_region_default_img" src="/static/img/regions/webp/55/{{ region.on_map_id }}.webp">
             <div class="ct__selectWithImage-firstText">
                 <span id="transfer_region_default_reg">{{ region.region_name }}</span>
                 <svg class="ct__selectWithImage-arrow" width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -26,7 +26,7 @@
         <div class="ct__selectWithImage-content custom-scroll custom-scroll--alt">
             {% for region in regions %}
             <div id="transfer_region_{% localize off %}{{ region.pk }}{% endlocalize %}" {% if forloop.counter0 == 0 %}class="region_storage"{% endif %} data-value="{% localize off %}{{ region.pk }}{% endlocalize %}">
-                <img class="offer_dummy_img" src="/static/img/regions/{{ region.on_map_id }}.png">
+                <img class="offer_dummy_img" src="/static/img/regions/webp/55/{{ region.on_map_id }}.webp">
                 <span class="offer_dummy_region">{{ region.region_name }}</span>
             </div>
             {% endfor %}
