--- a/bill/templates/state/redesign/reviewed/start_war.html
+++ b/bill/templates/state/redesign/reviewed/start_war.html
@@ -21,11 +21,11 @@
     <td>
         <div class="gover__tableVote-wrappper">
             <div class="gover__withImage" style="margin-bottom: 4rem;">
-                <img src="static/img/regions/{{ bill.region.on_map_id }}.png" alt="">
+                <img src="static/img/regions/webp/55/{{ bill.region.on_map_id }}.webp" alt="">
                 <span>{{ bill.region }}</span>
             </div>
             <div class="gover__withImage">
-                <img src="static/img/regions/{{ bill.region_to.on_map_id }}.png" alt="">
+                <img src="static/img/regions/webp/55/{{ bill.region_to.on_map_id }}.webp" alt="">
                 <span>{{ bill.region_to }}</span>
             </div>
         </div>
