--- a/gov/templates/state/redesign/forms/foreign_right.html
+++ b/gov/templates/state/redesign/forms/foreign_right.html
@@ -38,7 +38,7 @@
             </td>
             <td>
                 <div class="gover__withImage">
-                    <img src="static/img/regions/{{ request.region.on_map_id }}.png" alt="">
+                    <img src="static/img/regions/webp/55/{{ request.region.on_map_id }}.webp" alt="">
                     <span onclick="window.location.href = '/region/{{ request.region.pk }}'" style="cursor: pointer">{{ request.region.region_name }}</span>
                 </div>
             </td>
@@ -68,7 +68,7 @@
             </td>
             <td>
                 <div class="gover__withImage">
-                    <img src="static/img/regions/{{ request.region.on_map_id }}.png" alt="">
+                    <img src="static/img/regions/webp/55/{{ request.region.on_map_id }}.webp" alt="">
                     <span onclick="window.location.href = '/region/{{ region.pk }}'" style="cursor: pointer">{{ region.region_name }}</span>
                 </div>
             </td>
