--- a/gov/templates/state/redesign/forms/mining_stats.html
+++ b/gov/templates/state/redesign/forms/mining_stats.html
@@ -35,7 +35,7 @@
         <tr>
             <td>
                 <div class="gover__withImage">
-                    <img src="static/img/regions/{{ region.on_map_id }}.png">
+                    <img src="static/img/regions/webp/55/{{ region.on_map_id }}.webp">
                     <span>{{ region.region_name }}</span>
                 </div>
             </td>
