--- a/party/templates/party/redesign/party_view.html
+++ b/party/templates/party/redesign/party_view.html
@@ -64,7 +64,7 @@
           <h2 class="party__top-name">{{ party.title }}</h2>
 
           <div class="party__region">
-            <img src="/static/img/regions/{{ party.region.on_map_id }}.png">
+            <img src="/static/img/regions/webp/55/{{ party.region.on_map_id }}.webp">
             <p>{{ party.region.region_name }}</p>
           </div>
 
