--- a/region/templates/region/redesign/plane_info.html
+++ b/region/templates/region/redesign/plane_info.html
@@ -22,11 +22,11 @@
 
   <p>
     {% if player.destination %}
-    <img src="static/img/regions/{{ player.destination.on_map_id }}.png">
+    <img src="static/img/regions/webp/33/{{ player.destination.on_map_id }}.webp">
    {{ player.destination.region_name }}
 
     {% else %}
-    <img src="static/img/regions/{{ player.region.on_map_id }}.png">
+    <img src="static/img/regions/webp/33/{{ player.region.on_map_id }}.webp">
    {{ player.region.region_name }}
 
     {% endif %}
