--- a/region/templates/region/redesign/region_view.html
+++ b/region/templates/region/redesign/region_view.html
@@ -28,7 +28,7 @@
     <!--ТОП БЛОК-->
     <div class="party__top">
       <!--аватар-->
-      <img class="party__top-ava" src="/static/img/regions/{{ region.on_map_id }}.png">
+      <img class="party__top-ava" src="/static/img/regions/webp/{{ region.on_map_id }}.webp">
 
       <!--инфа в топ блоке-->
       <div class="party__top-content">
