--- a/state/templates/state/redesign/gov/government.html
+++ b/state/templates/state/redesign/gov/government.html
@@ -260,7 +260,7 @@ if (mainElement && openModalBtnElement && closeModalBtnElement) {
 
 		{% if player.region.state %}
         <div class="party__region">
-          <img src="static/img/regions/{{ capital.on_map_id }}.png">
+          <img src="static/img/regions/webp/55/{{ capital.on_map_id }}.webp">
           <p>{% trans 'Столица' context "government" %}: {{ capital.region_name }}</p>
         </div>
 	    {% endif %}
