--- a/war/templates/war/redesign/GroundWar.html
+++ b/war/templates/war/redesign/GroundWar.html
@@ -142,7 +142,7 @@
       <div class="war__sides">
         <div class="war__gerbs">
           <p>{% trans 'Атака' context "war_page" %}:</p>
-          <img src="/static/img/regions/{{ war.agr_region.on_map_id }}.png">
+          <img src="/static/img/regions/webp/{{ war.agr_region.on_map_id }}.webp">
         </div>
 
         <p>
@@ -157,7 +157,7 @@
 
         <div class="war__gerbs">
           <p>{% trans 'Защита' context "war_page" %}:</p>
-          <img src="/static/img/regions/{{ war.def_region.on_map_id }}.png">
+          <img src="/static/img/regions/webp/{{ war.def_region.on_map_id }}.webp">
         </div>
       </div>
 
@@ -280,7 +280,7 @@
             {% for storage in storages %}
             {% if forloop.counter0 == 0 %}
 			<div class="ct__selectWithImage-selected" id="default_storage" data-value="{% localize off %}{{ storage.pk }}{% endlocalize %}">
-				<img id="create_default_img" src="/static/img/regions/{{ storage.region.on_map_id }}.png">
+				<img id="create_default_img" src="/static/img/regions/webp/55/{{ storage.region.on_map_id }}.webp">
 				<div class="ct__selectWithImage-firstText">
 					<span id="create_default_region">{% trans storage.region.region_name context "regions_list" %}</span>
 					<svg class="ct__selectWithImage-arrow" width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -293,7 +293,7 @@
 			<div class="ct__selectWithImage-content custom-scroll custom-scroll--alt">
                 {% for storage in storages %}
                 <div id="create_storage_{% localize off %}{{ storage.pk }}{% endlocalize %}" {% if forloop.counter0 == 0 %}class="first_storage"{% endif %} data-value="{% localize off %}{{ storage.pk }}{% endlocalize %}">
-                    <img class="offer_dummy_img" src="/static/img/regions/{{ storage.region.on_map_id }}.png">
+                    <img class="offer_dummy_img" src="/static/img/regions/webp/55/{{ storage.region.on_map_id }}.webp">
                     <span class="offer_dummy_region">{% trans storage.region.region_name context "regions_list" %}</span>
                 </div>
                 {% endfor %}
