--- a/bill/templates/state/redesign/bills/transfer_accept.html
+++ b/bill/templates/state/redesign/bills/transfer_accept.html
@@ -19,7 +19,7 @@
 
     <td>
         <div class="gover__withImage">
-            <img src="static/img/regions/{{ bill.region.on_map_id }}.png">
+            <img src="static/img/regions/webp/55/{{ bill.region.on_map_id }}.webp">
             <span>{{ bill.region }}</span>
         </div>
     </td>
