--- a/bill/templates/state/redesign/drafts/martial_law.html
+++ b/bill/templates/state/redesign/drafts/martial_law.html
@@ -11,7 +11,7 @@
         {% for region in regions %}
         {% if forloop.counter0 == 0 %}
         <div class="ct__selectWithImage-selected" id="martial_law_default_region" data-value="{% localize off %}{{ region.pk }}{% endlocalize %}">
-            <img id="explore_resources_default_img" src="/static/img/regions/{{ region.on_map_id }}.png">
+            <img id="explore_resources_default_img" src="/static/img/regions/webp/55/{{ region.on_map_id }}.webp">
             <div class="ct__selectWithImage-firstText">
                 <span id="explore_resources_default_reg">{{ region.region_name }}</span>
                 <svg class="ct__selectWithImage-arrow" width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -24,7 +24,7 @@
         <div class="ct__selectWithImage-content custom-scroll custom-scroll--alt">
             {% for region in regions %}
             <div id="explore_resources_{% localize off %}{{ region.pk }}{% endlocalize %}" {% if forloop.counter0 == 0 %}class="region_storage"{% endif %} data-func="set_explore_val" data-value="{% localize off %}{{ region.pk }}{% endlocalize %}">
-                <img class="offer_dummy_img" src="/static/img/regions/{{ region.on_map_id }}.png">
+                <img class="offer_dummy_img" src="/static/img/regions/webp/55/{{ region.on_map_id }}.webp">
                 <span class="offer_dummy_region">{{ region.region_name }}</span>
             </div>
             {% endfor %}
