--- a/bill/templates/state/redesign/reviewed/geological_surveys.html
+++ b/bill/templates/state/redesign/reviewed/geological_surveys.html
@@ -21,7 +21,7 @@
     <td>
         <div class="gover__tableVote-wrappper">
             <div class="gover__withImage" style="margin-bottom: 4rem;">
-                <img src="static/img/regions/{{ bill.region.on_map_id }}.png">
+                <img src="static/img/regions/webp/55/{{ bill.region.on_map_id }}.webp">
                 <span>{{ bill.region }}</span>
             </div>
             <div class="gover__withImage">
