--- a/party/templates/lists/state_parties_list.html
+++ b/party/templates/lists/state_parties_list.html
@@ -43,7 +43,7 @@
                                         <h3>{{ sizes|dict_key:party }}</h3>
                                     </div>
                                     <div class="col-xs-1 col-sm-1 col-md-1">
-                                        <img src="/static/img/regions/{{ party.region.on_map_id }}.png" class='image' width='50' height='50'>
+                                        <img src="/static/img/regions/webp/55/{{ party.region.on_map_id }}.webp" class='image' width='50' height='50'>
                                     </div>
                                     <div class="col-xs-4 col-sm-4 col-md-4">
                                         <h3>{{ party.region.region_name }}</h3>
