--- a/player/templates/player/redesign/lists/universal_list.html
+++ b/player/templates/player/redesign/lists/universal_list.html
@@ -118,7 +118,7 @@
 								  {% if sub_obj|check_object %}
 								  		<!--картинка рега-->
 									  {% if col == 'region' and sub_col == 'on_map_id' %}
-											<img src="/static/img/regions/{{ sub_obj.on_map_id }}.png" alt="{{ col }}_{{ sub_col }}">
+											<img src="/static/img/regions/webp/33/{{ sub_obj.on_map_id }}.webp" alt="{{ col }}_{{ sub_col }}">
 										<!--картинка-->
 									  {% elif sub_col == 'image' %}
 								      	{% with sub_obj_img=sub_obj|get_attr:sub_col %}
@@ -146,7 +146,7 @@
 						  <td class="j-t-{{ col }}" style="cursor: pointer" onclick="window.open('/{% if line|get_class_name == 'Player' or line|get_class_name == 'PlayerWithDmg' or line|get_class_name == 'PlayerWithTop' or line|get_class_name == '_PlayerWithTop' or line|get_class_name == 'PlayerWithCash' or line|get_class_name == 'PPlayerWithTop' or line|get_class_name == 'KPlayerWithTop' or line|get_class_name == 'EPlayerWithTop' %}profile{% elif line|get_class_name == '_PartyWithSize' %}party{% elif line|get_class_name == 'RegionWithPop' %}region{% else %}{{ line|get_class_name|lower }}{% endif %}/{% localize off %}{{ line.pk }}{% endlocalize %}/')">
 						  <!--картинка рега-->
 						  {% if col == 'on_map_id' %}
-								<img src="/static/img/regions/{{ line.on_map_id }}.png" alt="{{ col }}">
+								<img src="/static/img/regions/webp/33/{{ line.on_map_id }}.webp" alt="{{ col }}">
 						  <!--картинка-->
 						  {% elif col == 'image' %}
 							{% with obj_img=line|get_attr:col %}
