--- a/storage/templates/storage/redesign/trading/trading.html
+++ b/storage/templates/storage/redesign/trading/trading.html
@@ -229,7 +229,7 @@
             {% for storage in storages %}
             {% if forloop.counter0 == 0 %}
             <div class="ct__selectWithImage-selected" id="create_default_storage" data-value="{% localize off %}{{ storage.pk }}{% endlocalize %}">
-                <img id="create_default_img" src="static/img/regions/{{ storage.region.on_map_id }}.png">
+                <img id="create_default_img" src="static/img/regions/webp/55/{{ storage.region.on_map_id }}.webp">
                 <div class="ct__selectWithImage-firstText">
                     <span id="create_default_region">{% trans storage.region.region_name context "regions_list" %}</span>
                     <svg class="ct__selectWithImage-arrow" width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -242,7 +242,7 @@
             <div class="ct__selectWithImage-content custom-scroll custom-scroll--alt">
                 {% for storage in storages %}
                 <div id="create_storage_{% localize off %}{{ storage.pk }}{% endlocalize %}" {% if forloop.counter0 == 0 %}class="first_storage"{% endif %} data-value="{% localize off %}{{ storage.pk }}{% endlocalize %}">
-                    <img class="offer_dummy_img" src="static/img/regions/{{ storage.region.on_map_id }}.png">
+                    <img class="offer_dummy_img" src="static/img/regions/webp/55/{{ storage.region.on_map_id }}.webp">
                     <span class="offer_dummy_region">{{ storage.region.region_name }}</span>
                 </div>
                 {% endfor %}
@@ -358,7 +358,7 @@
                 {% for storage in storages %}
                 {% if forloop.counter0 == 0 %}
                 <div class="ct__selectWithImage-selected" id="offer_default_storage" data-value="{% localize off %}{{ storage.pk }}{% endlocalize %}">
-                    <img id="offer_default_img" src="static/img/regions/{{ storage.region.on_map_id }}.png">
+                    <img id="offer_default_img" src="static/img/regions/webp/55/{{ storage.region.on_map_id }}.webp">
                     <div class="ct__selectWithImage-firstText">
                         <span id="offer_default_region">{% trans storage.region.region_name context "regions_list" %}</span>
                         <svg class="ct__selectWithImage-arrow" width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -371,7 +371,7 @@
                 <div class="ct__selectWithImage-content custom-scroll custom-scroll--alt">
                     {% for storage in storages %}
                     <div id="storage_{% localize off %}{{ storage.pk }}{% endlocalize %}" {% if forloop.counter0 == 0 %}class="first_storage"{% endif %} data-value="{% localize off %}{{ storage.pk }}{% endlocalize %}">
-                        <img class="offer_dummy_img" src="static/img/regions/{{ storage.region.on_map_id }}.png">
+                        <img class="offer_dummy_img" src="static/img/regions/webp/55/{{ storage.region.on_map_id }}.webp">
                         <span class="offer_dummy_region">{% trans storage.region.region_name context "regions_list" %}</span>
                     </div>
                     {% endfor %}
