--- a/party/templates/party/redesign/manage.html
+++ b/party/templates/party/redesign/manage.html
@@ -416,8 +416,8 @@
 				</div>
 			</div>
 			<div class="btn-r-wrapper">
-				<button type="button" class="btn btn-default back-crop-js" data-dismiss="modal">{% trans 'Отмена' %}</button>
-				<button type="button" class="btn btn-primary js-crop-and-upload">{% trans 'Загрузить' %}</button>
+				<button type="button" class="btn btn-default back-crop-js" data-dismiss="modal">{% trans 'Отмена' context 'profile' %}</button>
+				<button type="button" class="btn btn-primary js-crop-and-upload">{% trans 'Загрузить' context 'change_coat_draft' %}</button>
 			</div>
 			</div>
 		</div>
