--- a/party/templates/party/redesign/lists/party_top.html
+++ b/party/templates/party/redesign/lists/party_top.html
@@ -23,7 +23,7 @@
             <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"/>
           </g>
         </svg>
-        <span>{% trans 'Добыча' %}</span>
+        <span>{% trans 'Добыча' context "party_top" %}</span>
       </button>
 
       <button class="ct__top-tab ct__mid-btn">
@@ -38,7 +38,7 @@
             <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"/>
           </g>
         </svg>
-        <span>{% trans 'Характ-ки' %}</span>
+        <span>{% trans 'Характ-ки' context "party_top" %}</span>
       </button>
 
       <button class="ct__top-tab ct__mid-btn">
@@ -53,7 +53,7 @@
             <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"/>
           </g>
         </svg>
-        <span>{% trans 'Производство' %}</span>
+        <span>{% trans 'Производство' context "party_top" %}</span>
       </button>
 
     </div>
