--- a/player/templates/player/redesign/lists/skill_top.html
+++ b/player/templates/player/redesign/lists/skill_top.html
@@ -23,7 +23,7 @@
             <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"/>
           </g>
         </svg>
-        <span>{% trans 'Сила' %}</span>
+        <span>{% trans 'Сила' context "skills" %}</span>
       </button>
 
       <button class="ct__top-tab ct__mid-btn">
@@ -38,7 +38,7 @@
             <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"/>
           </g>
         </svg>
-        <span>{% trans 'Интеллект' %}</span>
+        <span>{% trans 'Интеллект' context "skills" %}</span>
       </button>
 
       <button class="ct__top-tab ct__mid-btn">
@@ -53,7 +53,7 @@
             <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"/>
           </g>
         </svg>
-        <span>{% trans 'Выносливость' %}</span>
+        <span>{% trans 'Выносливость' context "skills" %}</span>
       </button>
 
     </div>
