--- a/player/templates/player/redesign/new_player.html
+++ b/player/templates/player/redesign/new_player.html
@@ -31,21 +31,14 @@
 
   <section class="create">
 		<!-- Заголовок -->
-      <h1 class="create__title ct__page-title">{% trans 'Создание персонажа' %}</h1>
+      <h1 class="create__title ct__page-title">{% trans 'Создание персонажа' context "new_player" %}</h1>
       <form method="POST" action="{% url 'new_player' %}" enctype="multipart/form-data" id="post-form" class="create__form">
       {% csrf_token %}
       <!--Никнейм-->
-      <h2>{% trans 'Никнейм' %}</h2>
+      <h2>{% trans 'Никнейм' context "new_player" %}</h2>
       <input type="text" id="your_name" name="nickname" value="{{ nickname }}" maxlength="30">
-      <!--Аватар-->
-<!--      <h2>{% trans 'Аватар' %}</h2>-->
-<!--      <input type="file" name="image" accept="image/*" id="id_image">-->
-<!--      <input type="hidden" name="x" id="id_x">-->
-<!--      <input type="hidden" name="y" id="id_y">-->
-<!--      <input type="hidden" name="width" id="id_width">-->
-<!--      <input type="hidden" name="height" id="id_height">-->
       <!--Часовой пояс-->
-      <h2>{% trans 'Часовой пояс' %}</h2>
+      <h2>{% trans 'Часовой пояс' context "new_player" %}</h2>
       <label class="create__label">
         <select id="timezone" name="time_zone">
 <!--          <option value="none" disabled selected>выбор действия</option>-->
@@ -91,68 +84,11 @@
   
 </main>
 
-<!-- ОБРЕЗКА ИЗОБРАЖЕНИЙ МОДАЛКА -->
-<!--<div class="img_modal" id="modalCrop">-->
-<!--    <div class="modal-cropper-wrapper">-->
-<!--        <div class="modal-dialog">-->
-<!--            <div class="modal-content">-->
-<!--                <div class="modal-header">-->
-<!--                    <button type="button" class="close" id="crop-close" aria-label="Close">-->
-<!--                        <span aria-hidden="true">×</span>-->
-<!--                    </button>-->
-<!--                </div>-->
-<!--                <div class="modal-body">-->
-<!--                    <img id="image" src="" alt="The image to preview" style="width: 274.129px; height: 274.129px; transform: translateX(-13.0647px);"></span>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="modal-footer">-->
-<!--            <div class="btn-l-wrapper">-->
-<!--                <div class="btn-group pull-left" role="group" style="margin-right: 5px;">-->
-<!--                    <button type="button" class="btn btn-default js-zoom-in">-->
-<!--                        <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">-->
-<!--                            <path d="M1 18L6 13" stroke="var(&#45;&#45;c60)"/>-->
-<!--                            <circle cx="11" cy="8" r="7.5" stroke="var(&#45;&#45;c60)"/>-->
-<!--                            <path d="M11 4V12M15 8H7" stroke="var(&#45;&#45;c60)"/>-->
-<!--                        </svg>-->
-<!--                    </button>-->
-<!--                    <button type="button" class="btn btn-default js-zoom-out">-->
-<!--                        <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">-->
-<!--                            <path d="M1 18L6 13" stroke="var(&#45;&#45;c60)"/>-->
-<!--                            <circle cx="11" cy="8" r="7.5" stroke="var(&#45;&#45;c60)"/>-->
-<!--                            <path d="M15 8H7" stroke="var(&#45;&#45;c60)"/>-->
-<!--                        </svg>-->
-<!--                    </button>-->
-<!--                </div>-->
-<!--                <div class="btn-group pull-left" role="group">-->
-<!--                    <button type="button" class="btn btn-default js-pic-up">-->
-<!--                        <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">-->
-<!--                            <path d="M10 1L1 10M10 1L19 10M10 1V19" stroke="var(&#45;&#45;c60)"/>-->
-<!--                        </svg>-->
-<!--                    </button>-->
-<!--                    <button type="button" class="btn btn-default js-pic-down">-->
-<!--                        <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">-->
-<!--                            <path d="M10 18L19 9M10 18L1 9M10 18V0" stroke="black"/>-->
-<!--                        </svg>-->
-<!--                    </button>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="btn-r-wrapper">-->
-<!--                <button type="button" class="btn btn-default back-crop-js" data-dismiss="modal">{% trans 'Отмена' %}</button>-->
-<!--                <button type="button" class="btn btn-primary js-crop-and-upload">{% trans 'Загрузить' %}</button>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-<!--<script src="{% static 'redesign/js/cropper.min.js' %}?{{ csrf_token }}"></script>-->
-<!-- КОНЕЦ ОБРЕЗКИ ИЗОБРАЖЕНИЙ МОДАЛКА -->
-
 <!-- ГЛОБАЛЬНОЕ МОДАЛЬНОЕ ОКНО -->
 <div class="modal">
 	<div class="modal__inner-window">
 		<h2 class="modal__header ct__nickname">
 			<span>
-				{% trans 'Отмена' %}
 			</span>
 		</h2>
 		<p class="modal__text"></p>
@@ -180,7 +116,7 @@
 					<path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"/>
 				</g>
 			</svg>
-			<span>{% trans 'Отмена' %}</span>
+			<span></span>
 		</button>
 		<div class="modal__decor ct__decor-border">
 			<svg width="360" height="194" viewBox="0 0 360 194" fill="none" xmlns="http://www.w3.org/2000/svg">
