--- a/player/templates/player/translate/translate.html
+++ b/player/templates/player/translate/translate.html
@@ -33,7 +33,7 @@
                 <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"/>
               </g>
             </svg>
-            <span>{% trans 'сохранить' %}</span>
+            <span>{% trans 'сохранить' context "translations" %}</span>
             </button>
             {% if user.is_superuser %}
             <div class="translate__checkbox ct__check-box30">
